infra/k8s/overlays/local/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mkc
  labels:
    environment: local
