infra/k8s/overlays/local/image-policy-ai-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
spec:
  template:
    spec:
      containers:
        - name: ai-service
          imagePullPolicy: IfNotPresent
