infra/k8s/overlays/local/image-policy-client-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  template:
    spec:
      containers:
        - name: client
          imagePullPolicy: IfNotPresent
